--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
 <script>
-console.log("404 reporting for duty");
+  console.log("404 reporting for duty "+document.location);
+  window.location.href = "/world"
 </script>
