--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <script>
   console.log("404 reporting for duty "+document.location);
   if(document.location.href.indexOf("/world/")>-1)
-    window.location.href = document.location.href.replace("/world/","/world#");
+    window.location.href = document.location.href.replace("/world/","/worlds/#");
 </script>
 Kodu 404
